connect client to server